# diff_robot

./: CMakeLists.txt  README.md  diffdrive_stm.xml  package.xml
bringup/config/: diffbot_controllers.yaml  ekf.yaml
bringup/launch/: diffbot.launch.py
config/: my_controllers.yaml  rviz.rviz
description/: real_robot.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
doc/: userdoc.rst
hardware/: base_control.py  diffbot_system.cpp  ros协议.txt
hardware/include/diffdrive_stm/: diffbot_system.hpp  stm32_comms.hpp  visibility_control.h  wheel.hpp
launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
test/: test_uart.py  test_urdf_xacro.py  test_view_robot_launch.py
